# cory

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  SESSION.md
.claude/rules/: RUST.md  TS.md
.github/workflows/: ci.yml
crates/cory/: Cargo.toml  README.md  build.rs
crates/cory-core/: Cargo.toml  README.md
crates/cory-core/src/: cache.rs  enrich.rs  error.rs  graph.rs  labels.rs  lib.rs  test_util.rs  types.rs
crates/cory-core/src/labels/: jsonl.rs  mod.rs  pack.rs  store.rs  types.rs
crates/cory-core/src/rpc/: http_adapter.rs  mock.rs  mod.rs  types.rs
crates/cory-core/src/rpc/http_adapter/: client.rs  connection.rs  mod.rs  parsing.rs  protocol.rs
crates/cory-core/tests/: regtest_graph.rs  regtest_rpc.rs
crates/cory/src/: auth.rs  cli.rs  main.rs  server.rs
crates/cory/src/server/: auth.rs  error.rs  graph.rs  history.rs  labels.rs  limits.rs  mod.rs  static_files.rs
crates/cory/tests/: regtest_server.rs
crates/cory/ui/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
crates/cory/ui/src/: Api.ts  App.tsx  Main.tsx  Types.ts  api.ts  constants.ts  format.ts  index.css  labels.ts  layout.ts  model.ts  store.ts  types.ts
crates/cory/ui/src/components/: GraphPanel.tsx  Header.tsx  LabelCrudManager.tsx  LabelPanel.tsx  SelectedTxEditor.tsx  SidebarHandle.tsx  TargetLabelEditor.tsx  TxNode.tsx  TxNodeInputRow.tsx  TxNodeOutputRow.tsx
crates/cory/ui/src/components/Common/: CopyButton.tsx  LabelLine.tsx
crates/cory/ui/src/components/LabelPanel/: CrudManager.tsx  HistorySection.tsx  LabelFilePopup.tsx  LabelPanel.tsx  SelectedTxEditor.tsx  ServerLabelsSection.tsx  TargetLabelEditor.tsx
crates/cory/ui/src/components/LabelPanel/TargetLabelEditor/: AddLabelSection.tsx  EditableLabelRow.tsx  Index.ts  ReadOnlyLabelList.tsx
crates/cory/ui/src/components/TxNode/: BaseRail.tsx  InputRow.tsx  MiddleEllipsisText.tsx  OutputRow.tsx  TxNode.tsx  TxNodeCollapseRail.tsx  TxNodeExpandRail.tsx  TxNodeHeader.tsx
crates/cory/ui/src/components/label_panel/: CrudManager.tsx  LabelFilePopup.tsx  Panel.tsx  SelectedTxEditor.tsx  TargetLabelEditor.tsx
crates/cory/ui/src/components/label_panel/target_label_editor/: AddLabelSection.tsx  EditableLabelRow.tsx  ReadOnlyLabelList.tsx  index.ts
crates/cory/ui/src/components/txnode/: InputRow.tsx  MiddleEllipsisText.tsx  Node.tsx  OutputRow.tsx
crates/cory/ui/src/graph/: GraphUtils.ts  LabelUtils.ts  Layout.ts  LayoutScoring.ts  RenderModel.ts
crates/cory/ui/src/hooks/: UseAppInitialization.ts  UseAutosave.ts  UseSidebarResize.ts  useAutosave.ts  useSidebarResize.ts  useThemeMode.ts
crates/cory/ui/src/store/: AppStore.ts  AuthSlice.ts  GraphSlice.ts  InternalState.ts  LabelSlice.ts
crates/cory/ui/src/styles/: Base.css  Components.css  Index.css  ReactFlow.css  Variables.css
crates/cory/ui/src/utils/: Format.ts  LabelFileParser.ts  Navigation.ts  TextMeasure.ts
docs/: AGENTS.rust.md  AGENTS.ts.md  ARCHITECTURE.md  RELEASING.md
scripts/: common.py
scripts/regtest/: graph.py  rpc_e2e.py  server_e2e.py
scripts/ui/: manual_fixtures.py
scripts/ui/playwright/: label.py  label_cases.py  label_runtime.py
ui/: index.html
