[workspace]
resolver = "2"
members = ["crates/cory-core", "crates/cory"]

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
bitcoin = { version = "0.32.8", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
eyre = "0.6"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", default-features = false }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
