[package]
name = "cory-core"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Core domain logic for Cory: Bitcoin RPC adapter, ancestry graph builder, labels, and caching."
documentation = "https://docs.rs/cory-core"
homepage = "https://github.com/panon-btc/cory"
repository = "https://github.com/panon-btc/cory"
readme = "README.md"

[dependencies]
async-trait = { workspace = true }
bitcoin = { workspace = true }
futures = "0.3.31"
governor = "0.10.4"
lru = "0.16.3"
quick_cache = "0.6.18"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
