[package]
name = "cory"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
cory-core = { path = "../cory-core" }
axum = { workspace = true }
bitcoin = { workspace = true }
clap = { workspace = true }
eyre = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal", "fs"] }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
zip = "8.0.0"
[dev-dependencies]
reqwest = { workspace = true }
