[package]
name = "cory"
version = "0.1.2"
edition = "2021"
license.workspace = true
description = "Visual Bitcoin transaction ancestry explorer with embedded web UI and REST API."
documentation = "https://docs.rs/cory"
homepage = "https://github.com/panon-btc/cory"
repository = "https://github.com/panon-btc/cory"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/README.md",
    "/build.rs",
    "/src/**/*.rs",
    "/tests/**/*.rs",
    "/ui/dist/**",
]

[dependencies]
cory-core = { version = "0.1.1", path = "../cory-core" }
axum = { workspace = true }
bitcoin = { workspace = true }
clap = { workspace = true }
eyre = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal", "fs"] }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
time = { version = "0.3", features = ["formatting"] }
zip = "8.0.0"
[build-dependencies]
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
async-trait = { workspace = true }
reqwest = { workspace = true }
tower = "0.5"
